@@ -73,11 +73,11 @@
 	</ul>
 
 	<p>Windows Media Player works well out of the box but isn't able to
-		transcode or remux and has poor performance at a huge media database.
-		Twonky media is not for free. Twonky media has its advantage in
+		transcode or remux and has poor performance with a huge media database.
+		Twonky media is not for free. Twonky media has its advantages in
 		supporting a lot of different streaming clients, even NAS systems.
 		TVersity is an average media server and has some advantages in
-		streaming internet content. But this advanced feature is not included
+		streaming Internet content. But this advanced feature is not included
 		in the free version. Mediatomb is often used on open source operating
 		and embedded systems. It can be customized very well by experienced
 		shellscript gurus. It is not a good choice for beginners.</p>
